tests/neg/i16452.scala
val x = Seq(1, 2, 3).map:
// error